--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,6 @@
 {
   "main": "app.js",
-  "scripts": {
-
-  },
+  "scripts": {},
   "type": "module",
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -12,6 +10,7 @@
     "express-rate-limit": "^6.9.0",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4"
   }
 }
