--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,8 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "svelte": "^3.59.2",
+    "svelte-routing": "^2.7.0",
     "tailwindcss": "^3.3.5",
     "vite": "^4.5.0"
-  },
-  "dependencies": {
-    "svelte-navigator": "^3.2.2"
   }
 }
