--- a/client/package.json
+++ b/client/package.json
@@ -16,5 +16,8 @@
     "svelte-routing": "^2.7.0",
     "tailwindcss": "^3.3.5",
     "vite": "^4.5.0"
+  },
+  "dependencies": {
+    "svelte-french-toast": "^1.2.0"
   }
 }
